refactor(tooling): fold EntityFamilyResolver, drop redundant cache, dedup AsmKit array readers
Three independent micro-cleanups bundled since each is small and each touches
its own file.

EntityFamilyResolver (106 LOC, single call site) folded into
EntityRuntimeJsonWriter as private deriveFamilies + pickCanonicalFamilyRoot
statics. Cross-entity family clustering is pure post-emission logic over the
already-built entities JSON; co-locating it with the writer that consumes it
tightens the data flow.

EntityBlockOverlayResolver.KNOWN_LAYER_CACHE removed (plus the KNOWN_LAYER_NONE
sentinel + computeIfAbsent dance). detectKnownLayer's only I/O was
classNodes.load, which ClassNodeCache already memoises since commit edc2dfd.
The secondary cache was double-memoising parsed nodes and adding a sentinel
pattern with zero observable benefit. detectKnownLayer is invoked directly per
encountered layer; behaviour-equivalent.

AsmKit array-reader collectors consolidated. The three private helpers
collectIntArray1DEntries / collectIntArray2DEntries / collectFloatArray1DEntries
shared the same DUP / idx / value / xASTORE walker pattern with only type and
opcode differences. Extracted three primitives:
- findPutstatic(clinit, name, desc) - the leading PUTSTATIC scan
- findPrimitiveNewArrayBefore(put, operand) - the NEWARRAY back-walk + length read
- walkDupStoreEntries(start, stop, storeOp, len, skipUnknown, handler) - the
  forward DUP-rooted entry loop, parameterised on store opcode + handler
The three public methods (readStaticIntArray1D / readStaticIntArray2D /
readStaticFloatArray1D) keep their signatures; the 1D walkers shrink to ~10
lines each, the 2D walker uses walkDupStoreEntries for its inner row pack.
~70 LOC of near-duplicate state machine collapses to one parameterised helper.

Output byte-identical to baseline; AsmKit tests pass; tooling/entity/ now at
12 classes (down 2 from this session's start).